Reemplazar las llamadas deprecadas: el proyecto compila sin un solo aviso
Diez avisos de deprecacion, tres causas distintas.

new Locale(String) -> Locale.of(String)
--------------------------------------
NumberToLetterConverter. El constructor quedo deprecado en Java 19. Verificado
que la conversion devuelve exactamente lo mismo, decimales incluidos.

Thread.getId() -> Thread.threadId()
-----------------------------------
Seis usos, todos de traza: AbstractDAO, DBManagerV20 (2), DBManagerV30 (2) y
XmlManager. Java 19 deprecio getId() porque era sobreescribible; threadId() es
final y devuelve el mismo valor.

SXSSFWorkbook.dispose() -> SE ELIMINA, no se reemplaza
------------------------------------------------------
ExcelDataSource y ExcelUtil (2). Aca no habia un metodo nuevo al que migrar: se
fue a mirar el bytecode de POI 5.4 y close() YA LLAMA a dispose() adentro. Los
tres sitios cerraban el libro con try-with-resources y ADEMAS llamaban a
dispose(), asi que la llamada era redundante -en uno de ellos corria incluso
sobre un libro ya cerrado-. Por eso POI la deprecio, y por eso lo correcto es
borrarla y no sustituirla.

Eso arrastro dos cosas mas:

- El import de SXSSFWorkbook quedaba huerfano en ExcelDataSource.
- Un javadoc de ExcelUtil decia "el dispose() no es optativo: sin el, cada
  exportacion deja en el directorio temporal del servidor los archivos que
  SXSSF creo". La advertencia de fondo sigue siendo cierta -esos temporales hay
  que borrarlos-, pero ya no la cumple dispose() sino el close() del
  try-with-resources. Reescrito: un comentario que apunta a un metodo que ya no
  esta es peor que ninguno.

OJO AL PORTAR: Locale.of y Thread.threadId() son Java 19+. Esto NO se lleva a
la rama 1.5.x, que compila con Java 11 y donde el codigo actual es el correcto
(mismo criterio que ya se uso con APP_LANGUAGE).

Verificado: mvn clean compile sin un solo aviso de deprecacion propio, tests de
commons en verde y la conversion a letras probada en vivo.

Co-Autho